methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:15: error: value backward is not a member of Nothing
possible cause: maybe a semicolon is missing before `value backward'?
  }backward()
   ^